add option for adding prescription

--- a/ForAnimalsWithLove/Views/Administrator/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/HealthRecordDetails.cshtml
@@ -44,7 +44,7 @@
 				<p><b>Общо състояние:</b> @Model.GeneralCondition </p>
 			</div>
 			
-			<div class="col-lg-5 res-margin">
+			<div class="text-center">
 				<div id="accordion" class="accordion-cards">
 					@foreach (var medical in Model.Medicals)
 					{
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 
-	</div>
+		</div>
 	</div>
 	<!-- /page -->
 	<!-- Bootstrap core & Jquery -->
