--- a/ForAnimalsWithLove/Views/Doctor/AddMedical.cshtml
+++ b/ForAnimalsWithLove/Views/Doctor/AddMedical.cshtml
@@ -1,5 +1,6 @@
-﻿@using ForAnimalsWithLove.ViewModels.Admins;
-@model AdminMedicalModel
+﻿@using ForAnimalsWithLove.ViewModels.Animals;
+
+@model AnimalMedicalModel
 
 @{
 	ViewBag.Title = "Добави преглед";
@@ -40,6 +41,11 @@
 				<label asp-for="Constatation"></label>
 				<input asp-for="Constatation" class="form-control" />
 				<span asp-validation-for="Constatation" class="small text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="PrescribedTreatment"></label>
+				<input asp-for="PrescribedTreatment" class="form-control" />
+				<span asp-validation-for="PrescribedTreatment" class="small text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="@Model.DoctorId" class="form-label-add-edit">Направление</label>
