--- a/ForAnimalsWithLove/Views/Trainer/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Trainer/HealthRecordDetails.cshtml
@@ -43,7 +43,7 @@
 				<p><b>Годишна ваксина:</b> @Model.AnnualVaccine </p>
 				<p><b>Общо състояние:</b> @Model.GeneralCondition </p>
 			</div>
-			<div class="col-lg-5 res-margin">
+			<div class="text-center">
 				<div id="accordion" class="accordion-cards">
 					@foreach (var medical in Model.Medicals)
 					{
