Change 500 error page

--- a/ForAnimalsWithLove/Views/Home/Error.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Error.cshtml
@@ -5,19 +5,17 @@
 }
 
 
-    <!-- ==== Page Content ==== -->
     <div class="page paws-house-bg1">
         <div class="container">
             <div class="row block-padding">
-                <div class="col-md-4 offset-md-1">
-                    <img src="~/images/500error.jpg" alt="error" class="center-block img-fluid float-right">
+                <div class="col-md-6 offset-md-1">
+                    <img src="~/images/500-error.jpg" alt="error" class="center-block img-fluid float-right">
                 </div>
-                <div class="col-md-5 h-50 border-irregular1  bg-light-custom text-center">
+                <div class="col-md-4 h-50 border-irregular1 bg-light-custom text-center">
                     <h1 class="mt-4">500</h1>
-                    <h4>Error</h4>
-                    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mb-5"> Go back to homepage</a>
+                    <h4>Грешка</h4>
+                    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mb-5"> Върни ме на началната страница</a>
                 </div>
             </div>
-            <!-- /container -->
         </div>
     </div>
