Add option for owner to see education information

--- a/ForAnimalsWithLove/Views/Administrator/AllAnimalsFiltred.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllAnimalsFiltred.cshtml
@@ -111,7 +111,7 @@
 				}
 				<div>
 					<div class="text-center col-md-10 col-xl-12">
-						<a asp-controller="Administrator" asp-action="AddAnimal" class="btn btn-primary"> + Добави клиент</a>
+						<a asp-area="" asp-controller="Administrator" asp-action="AddAnimal" class="btn btn-primary"> + Добави клиент</a>
 					</div>
 				</div>
 
