--- a/ForAnimalsWithLove/Views/Owner/EducationDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/EducationDetails.cshtml
@@ -18,6 +18,7 @@
 								<div class="text-center">
 									<ul class="list-unstyled pet-adopt-info">
 										<li class="h7">Дни: <span>@Model.Days</span></li>
+										<li> Треньор: <b>@Model.Trainer?.FirstName @Model.Trainer?.LastName</b></li>
 									</ul>
 								</div>
 								<!-- /div-->
