--- a/ForAnimalsWithLove/Views/Owner/EducationDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/EducationDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using ForAnimalsWithLove.ViewModels.Admins;
+﻿﻿@using ForAnimalsWithLove.ViewModels.Admins;
 @model AdminEducationModel
 
 
@@ -13,7 +13,7 @@
 					<div class="row bg-light-custom border-irregular1 block-padding text-center">
 
 						<div>
-							<h4>Обучение</h4>
+							<h4>Последно обучение</h4>
 							<div class="row">
 								<div class="text-center">
 									<ul class="list-unstyled pet-adopt-info">
