--- a/ForAnimalsWithLove/Views/Doctor/AnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Doctor/AnimalDetails.cshtml
@@ -39,6 +39,7 @@
 			<div class="card col-8 border-0">
 				<p style="font-size:25px;"><u>@Model.Name </u></p>
 				<p><b>Възраст:</b> @Model.Age</p>
+				<p><b>Собственик:</b> @Model.Owner.FirstName @Model.Owner.LastName </p>
 				<p><b>Вид:</b> @Model.KindOfAnimal </p>
 				<p><b>Порода:</b> @Model.Breed </p>
 				<p><b>Цвят:</b> @Model.Color </p>
