--- a/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
@@ -53,7 +53,10 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="text-center">
-							<a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="HealthRecordDetails" asp-route-id="@Model.Id"> Детайли здравно досие</a>
+							<a class="btn btn-primary" asp-controller="Administrator" asp-action="HealthRecordDetails" asp-route-id="@Model.Id"> Детайли здравно досие</a>
+						</div>
+						<div class="text-center">
+							<a class="btn btn-primary" asp-controller="Administrator" asp-action="GroomingDetails" asp-route-id="@Model.Id"> Детайли Grooming услуги</a>
 						</div>
 
 					</div>
