--- a/ForAnimalsWithLove/Views/Shared/_AddGroomingFormPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_AddGroomingFormPartial.cshtml
@@ -9,6 +9,11 @@
 			<input asp-for="Service" class="form-control" placeholder="Услуга...">
 			<span asp-validation-for="Service" class="small text-danger"></span>
 		</div>
+		<div class="form-group">
+			<label asp-for="Date"></label>
+			<input asp-for="Date" class="form-control" />
+			<span asp-validation-for="Date" class="small text-danger"></span>
+		</div>
 		
 	</div>
 </div>
