Add Owner View: Grooming Details

--- a/ForAnimalsWithLove/Views/Owner/GroomingDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/GroomingDetails.cshtml
@@ -13,11 +13,12 @@
 					<div class="row bg-light-custom border-irregular1 block-padding text-center">
 
 						<div>
-							<h4>Grooming</h4>
+							<h4>Последно посещение: Grooming</h4>
 							<div class="row">
 								<div class="text-center">
 									<ul class="list-unstyled pet-adopt-info">
 										<li class="h7">Използвана услуга: <span>@Model.Service</span></li>
+										<li class="h7">Дата: <span>@Model.Date.ToShortDateString()</span></li>
 									</ul>
 								</div>
 								<!-- /div-->
