Add Admin View: Booking Details, fix and change footer

--- a/ForAnimalsWithLove/Views/Administrator/AddSearchHome.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AddSearchHome.cshtml
@@ -11,7 +11,7 @@
 	<!-- Colors CSS -->
 	<link href="~/styles/maincolors.css" rel="stylesheet">
 </head>
-
+<body>
 <div class="page pb-0">
 	<div class="section-heading" data-aos="zoom-in">
 		<h3>@ViewBag.Title</h3>
@@ -25,6 +25,7 @@
 		<input class="btn btn-primary mt-3" type="submit" asp-controller="Administrator" asp-action="AddSearchHome" value="Запази" />
 	</div>
 </form>
+</body>
 
 
 
