--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                        <img src="~/images/logo.png" style="block-size: 200px" alt="ForAnimalsWithLove">
+                        <img src="~/images/logo.png" style="block-size: 300px" alt="ForAnimalsWithLove">
                     </a>
                 </div>
                 <!--/ col-lg -->
@@ -98,7 +98,12 @@
                           <li>Pet Street 123 - Sofia </li>
                        </ul>
                        <!--/ul -->
-                   
+                       <br />
+                    <h6><i class="fas fa-envelope margin-icon"></i>Подаване на сигнали за застрашени животни:</h6>
+                    <ul class="list-unstyled">
+                        <li>0885466254 - денонощен телефон</li>
+                    </ul>
+
                    </div>
                    <!--/ col-lg -->
                   <div class="col-lg-3">
