--- a/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
@@ -35,12 +35,12 @@
 			
 			<div class="card col-8 border-0">
 				
-				<p><b>Микрочип:</b> @Model.Microchip </p>
+				<p><b>Микрочип:</b> @(Model.Microchip ? "Да" : "Не") </p>
 				<p><b>Микрочип номер:</b> @Model.MicrochipNumber</p>
-				<p><b>Първа ваксина:</b> @Model.FirstVaccine </p>
-				<p><b>Втора ваксина:</b> @Model.SecondVaccine </p>
-				<p><b>Трета ваксина:</b> @Model.ThirdVaccine </p>
-				<p><b>Годишна ваксина:</b> @Model.AnnualVaccine </p>
+				<p><b>Първа ваксина:</b> @(Model.FirstVaccine ? "Да" : "Не")</p>
+				<p><b>Втора ваксина:</b> @(Model.SecondVaccine ? "Да" : "Не")</p>
+				<p><b>Трета ваксина:</b> @(Model.ThirdVaccine ? "Да" : "Не")</p>
+				<p><b>Годишна ваксина:</b> @(Model.AnnualVaccine ? "Да" : "Не")</p>
 				<p><b>Общо състояние:</b> @Model.GeneralCondition </p>
 			</div>
 
@@ -53,6 +53,9 @@
 				</div>
 			</div>
 			<p></p>
+			<div class="text-center col-md-10 col-xl-12">
+				<a asp-controller="Doctor" asp-action="EditHealthRecord" asp-route-id="@Model.Id" class="btn btn-primary"> Промени данни в здравно досие</a>
+			</div>
 			<div class="text-center col-md-10 col-xl-12">
 				<a asp-controller="Doctor" asp-action="AddHospitalRecord" asp-route-id="@Model.Id" class="btn btn-primary"> + Добави болнично досие</a>
 			</div>
