Add Hospital Record Details page for Owners

--- a/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
@@ -47,7 +47,7 @@
 				<p><b>Порода:</b> @Model.Breed </p>
 				<p><b>Цвят:</b> @Model.Color </p>
 				<p><b>Пол:</b> @Model.Sex </p>
-				<p><b>Дата на раждане:</b> @Model.Birthdate </p>
+				<p><b>Дата на раждане:</b> @Model.Birthdate.ToShortDateString() </p>
 
 			</div>
 			<div class="text-center col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
