--- a/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
@@ -38,7 +38,7 @@
 										<ul class="list-unstyled pet-adopt-info">
 											<li class="h7">Цвят: <span>@animal.Color</span></li>
 											<li class="h7">Пол: <span>@animal.Sex</span></li>
-											<li class="h7">Дата на раждане: <span>@animal.Birthdate</span></li>
+											<li class="h7">Дата на раждане: <span>@animal.Birthdate.ToShortDateString()</span></li>
 										</ul>
 									</div>
 									<!-- /div-->
