--- a/ForAnimalsWithLove/Views/Owner/HospitalRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/HospitalRecordDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ForAnimalsWithLove.ViewModels.Admins;
-@model AdminHospitalModel
+@model AdminHealthModel
 
 
 <body id="top">
@@ -10,28 +10,12 @@
 			<div class="row">
 				<div class="col-lg-10">
 
-					<div class="row bg-light-custom border-irregular1 block-padding text-center">
 
-						<div>
-							<h4>Болнично досие</h4>
-							<div class="row">
-								<div class="text-center">
-									<ul class="list-unstyled pet-adopt-info">
-										<li class="h7">Диагноза: <span>@Model.Diagnosis</span></li>
-										<li class="h7">Дата на прием: <span>@Model.DateOfAcceptance</span></li>
-										<li class="h7">Дата на изписване: <span>@Model.DateOfDischarge</span></li>
-										<li class="h7">Провело се лечение: <span>@Model.Treatment</span></li>
-										<li class="h7">Предписано лечение: <span>@Model.PrescribedTreatment</span></li>
-									</ul>
-								</div>
-								<!-- /div-->
-							</div>
-							<!-- /row-->
-
-						</div>
-						<!-- /col-md -->
-					</div>
-					<hr />
+					@foreach (var record in Model.HospitalRecords)
+					{
+						<partial name="_HospitalPartial" model="@record" />
+						<hr />
+					}
 
 
 				</div>
