Add Admin & Doctor option - Hospital Record Details

--- a/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AnimalDetails.cshtml
@@ -57,6 +57,9 @@
 							<a class="btn btn-primary" asp-controller="Administrator" asp-action="HealthRecordDetails" asp-route-id="@Model.Id"> Детайли здравно досие</a>
 						</div>
 						<div class="text-center">
+							<a class="btn btn-primary" asp-controller="Administrator" asp-action="HospitalRecordDetails" asp-route-id="@Model.Id"> Детайли болнично настаняване</a>
+						</div>
+						<div class="text-center">
 							<a class="btn btn-primary" asp-controller="Administrator" asp-action="GroomingDetails" asp-route-id="@Model.Id"> Детайли Grooming услуги</a>
 						</div>
 						<div class="text-center">
