--- a/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
@@ -52,7 +52,7 @@
 												<a class="btn btn-primary" asp-controller="Owner" asp-action="HealthRecordDetails" asp-route-id="@animal.Id"> Детайли здравно досие</a>
 											</li>
 											<li class="text-center">
-												<a class="btn btn-primary" asp-controller="Owner" asp-action="HospitalRecordDetails" asp-route-id="@animal.Id"> Детайли болнично досие</a>
+												<a class="btn btn-primary" asp-controller="Owner" asp-action="HospitalRecordDetails" asp-route-id="@animal.Id"> Детайли болнично настаняване</a>
 											</li>
 											<li class="text-center">
 												<a class="btn btn-primary" asp-controller="Owner" asp-action="GroomingDetails" asp-route-id="@animal.Id"> Детайли Grooming услуги</a>
