--- a/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/MyAnimalDetails.cshtml
@@ -14,6 +14,21 @@
 
 					@foreach (var animal in myAnimals)
 					{
+						var years = DateTime.Now.Year - animal.Birthdate.Year;
+						var months = DateTime.Now.Month - animal.Birthdate.Month;
+
+						if (DateTime.Now.Day < animal.Birthdate.Day)
+						{
+							months--;
+						}
+
+						if (months < 0)
+						{
+							years--;
+							months += 12;
+						}
+
+					
 						<div class="row bg-light-custom border-irregular1 block-padding">
 							<!-- image -->
 							<div class="col-lg-4 offset-lg-2">
@@ -29,7 +44,7 @@
 								<div class="row">
 									<div class="col-sm-6">
 										<ul class="list-unstyled pet-adopt-info">
-											<li class="h7">Възраст: <span>@animal.Age години</span></li>
+											<li class="h7">Възраст: <span>@years години и @months месеца</span></li>
 											<li class="h7">Вид: <span>@animal.KindOfAnimal</span></li>
 											<li class="h7">Порода: <span>@animal.Breed</span></li>
 										</ul>
